# TodoApp2

./: .dockerignore  .gitignore  Dockerfile  README.md  ToDO리스트 만들기.md  deploy-server.py  deploy.sh  pyproject.toml  requirements.txt
.cert/: 2DTvEegKdrsNMpsWI3qc3GukDNUNPlAd46SlqM-2MZw  5uelVwj6Kww5-wy2Z4lrLvhfFheswK5zAzIosk-vB_M
.config/: gunicorn.py  supervisord.conf  todos.nginx
app/config/: settings.py  urls.py
app/members/: forms.py  models.py  oauth.py  urls.py  views.py
app/members/migrations/: 0001_initial.py  0002_user_type.py
app/static/css/: main.css
app/statics/css/: main.css  startpage.css
app/templates/: base.html
app/templates/members/: login.html  signup.html
app/templates/todos/: main.html
app/todos/: admin.py  forms.py  models.py  urls.py  views.py
app/todos/migrations/: 0001_initial.py  0002_auto_20200123_1659.py
