[tool.poetry]
name = "todos"
version = "0.1.0"
description = ""
authors = ["hbyyy <qjaduddl94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "<3.0"
psycopg2-binary = "^2.8.4"
requests = "^2.22.0"
boto3 = "^1.11.9"

[tool.poetry.dev-dependencies]
notebook = "^6.0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
