[tool.poetry]
name = "todos"
version = "0.1.0"
description = ""
authors = ["hbyyy <qjaduddl94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "<3.0"
boto3 = "^1.11.9"
requests = "^2.22.0"
psycopg2-binary = "^2.8.4"
django_extensions = "^2.2.6"
gunicorn = "^20.0.4"
supervisor = "^4.1.0"

[tool.poetry.dev-dependencies]
notebook = "^6.0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
